did some spacing to make the logo and nav items fit correctly

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
 .navBar{
   display: inline-flex;
   flex-direction: row;
-  background-color: chartreuse;
+  background-color: navy;
   width: 100vw;
   height: 10vh;
   position: fixed;
@@ -54,14 +54,18 @@
 
 .logo{
   margin-left: 10vw;
-  margin-top: 4vh;
+  margin-top: 2vh;
   background-image: url("./charleslamb3264.png");
+  background-size: cover;
+  background-position: 100%;
+  height: 62px;
+  width: 260px;
 }
 
 .navOptions{
   display: inline-flex;
   flex-direction: row;
-  margin-left: 30vw;
+  margin-left: 18vw;
   margin-top: 3vh;
 
 }
